--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@
   font-size: small;
 }
 
+.content-column form > button:hover {
+  filter: brightness(120%);
+}
+
 .content-second {
   background-color: #f6f6fe;
   margin-left: 0;
@@ -150,6 +154,10 @@
   border-bottom: solid 1px #3c9f8f;
   width: fit-content;
   line-height: 1rem;
+}
+
+.fylolink:hover {
+  filter: brightness(120%);
 }
 
 .fylolink img {
@@ -208,6 +216,10 @@
   border-radius: 3px;
 }
 
+.calltoaction > div > form > button:hover {
+  filter: brightness(120%);
+}
+
 .fylofooter {
   display: flex;
   justify-content: space-between;
@@ -251,6 +263,9 @@
   padding: 3px;
   width: 1.5rem;
   height: 1.5rem;
+}
+.fylofooter__icon:hover {
+  color: #3065f8;
 }
 
 .fylofooter ul {
