--- a/style.css
+++ b/style.css
@@ -36,6 +36,17 @@
   margin-top: 2em;
 }
 
+@media (min-width: 500px) {
+  .content {
+    flex-direction: row;
+  }
+}
+@media (max-width: 499px) {
+  .content {
+    flex-direction: column;
+    gap: 5rem;
+  }
+}
 .content-column {
   display: flex;
   flex-direction: column;
@@ -63,6 +74,24 @@
   margin-bottom: -6px;
 }
 
+@media (max-width: 500px) {
+  .curve-lg {
+    display: none;
+  }
+
+  .curve-sm {
+    display: block;
+  }
+}
+@media (min-width: 500px) {
+  .curve-lg {
+    display: block;
+  }
+
+  .curve-sm {
+    display: none;
+  }
+}
 .content-column h2 {
   font-family: "Raleway", sans-serif;
   font-size: 2em;
